Translate some comments

--- a/purchaseApp/app.html
+++ b/purchaseApp/app.html
@@ -39,4 +39,4 @@
 <child-comp [userName] = "name" [userAge] = "userAge" (onChanged)="onChanged($event)"></child-comp>
 <input type="text" [(ngModel)]="name" />
 <p>Hello {{name}}</p>
-<h2>Количество кликов: {{clicks}}</h2>
+<h2>Amount of clicks: {{clicks}}</h2>
